admin view and sort events